<package>
  <name>xamla_robotiq_joint_state_publisher</name>
  <version>1.0.0</version>
  <description>Publishes joint state for Robotiq 2-Finger 85</description>
  <maintainer email="info@xamla.com">Xamla Team</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>robotiq_2f_gripper_control</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotiq_2f_gripper_control</run_depend>
</package>
